--- a/source/index.html
+++ b/source/index.html
@@ -5,10 +5,13 @@ layout: default
 <div class="blog-index">
   {% assign index = true %}
   {% for post in paginator.posts %}
-  {% assign content = post.content %}
-    <article>
-      {% include article.html %}
-    </article>
+    {% if post.categories contains 'reading' %}
+    {% else %}
+    {% assign content = post.content %}
+      <article>
+        {% include article.html %}
+      </article>
+    {% endif %}
   {% endfor %}
   <div class="pagination">
     {% if paginator.next_page %}
